--- a/index.html
+++ b/index.html
@@ -14,44 +14,42 @@
 <body>
   <div class="top_container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1 class="margin">I'm Umang.</h1>
-    <p class="margin">a web developer.</p>
+    <h1>I'm Umang.</h1>
+    <h2 class="sub-heading">a web developer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img class="mountain" src="images/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/man.png" alt="profile-photo">
+      <img class="profile-picture" src="images/man.png" alt="profile-photo">
       <h2>Hello.</h2>
       <p>I'm a Web Developer</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
-      <div class="skill-row">
-        <img class="" src="images/web-development.png" alt="first-skill">
+      <div class="skill-row1">
+        <img class="development-img" src="images/web-development.png" alt="first-skill">
         <h3>Design & Development</h3>
         <p>Started learning to code because i wanted to design and develop my own web applications</p>
       </div>
-      <div class="skill-row">
-        <img class="" src="images/android.png" alt="second-skill">
+      <div class="skill-row2">
+        <img class="android-img" src="images/android.png" alt="second-skill">
         <h3>Andriod Developer</h3>
         <p>My android development is in learning phase(i ❤ app development)</p>
       </div>
     </div>
     <hr>
-    <div class="contact-me">
+    <div class="get-in-touch">
       <h2>Get In Touch</h2>
       <h3>If you love building stuff.</h3>
-      <p>Wanting to hire me? Or stuck somewhere i also take freelance opportunities</p>
-      <a class="btn" href="mailto:kumarumang821@gmail.com">CONTACT ME</a>
+      <p class=contact-intro>Wanting to hire me? Or stuck somewhere i also take freelance opportunities</p>
+        <a class="btn" href="mailto:kumarumang821@gmail.com">CONTACT ME</a>
     </div>
   </div>
-
-
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/umang-kumar-4045b3158/">LinkedIn</a>
-    <p>© 2021 Umang Kumar</p>
+    <p class="copyright">© 2021 Umang Kumar</p>
   </div>
 
 </body>
