--- a/index.html
+++ b/index.html
@@ -3,55 +3,89 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Umang Kumar</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+  <title>Umang's Personal Site</title>
 </head>
 
 <body>
-  <div class="top_container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>I'm Umang.</h1>
-    <h2 class="sub-heading">a web developer.</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img class="mountain" src="images/mountain.png" alt="mountain-img">
-  </div>
-  <div class="middle-container">
-    <div class="profile">
-      <img class="profile-picture" src="images/man.png" alt="profile-photo">
-      <h2>Hello.</h2>
-      <p>I'm a Web Developer</p>
-    </div>
-    <hr>
-    <div class="skills">
-      <h2>My Skills.</h2>
-      <div class="skill-row1">
-        <img class="development-img" src="images/web-development.png" alt="first-skill">
-        <h3>Design & Development</h3>
-        <p>Started learning to code because i wanted to design and develop my own web applications</p>
-      </div>
-      <div class="skill-row2">
-        <img class="android-img" src="images/android.png" alt="second-skill">
-        <h3>Andriod Developer</h3>
-        <p>My android development is in learning phase(i ❤ app development)</p>
-      </div>
-    </div>
-    <hr>
-    <div class="get-in-touch">
-      <h2>Get In Touch</h2>
-      <h3>If you love building stuff.</h3>
-      <p class=contact-intro>Wanting to hire me? Or stuck somewhere i also take freelance opportunities</p>
-        <a class="btn" href="mailto:kumarumang821@gmail.com">CONTACT ME</a>
-    </div>
-  </div>
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/umang-kumar-4045b3158/">LinkedIn</a>
-    <p class="copyright">© 2021 Umang Kumar</p>
-  </div>
+  <table cellspacing="20">
+    <tr>
+      <td><a href="https://www.netflix.com/title/80002479"><img src="images\thomas_shelby.jfif" alt="Thomas Shelby"></a></td>
+      <td>
+        <h1>Umang Kumar</h1>
+        <p><em><strong>Learner and Fresher</strong></em></p>
+        <br>
+        <p>The best bios include essential and interesting information.</p>
+      </td>
+    </tr>
+  </table>
 
+
+  <hr>
+  <h3>Education</h3>
+  <ul>
+    <li>Schooling from <a href="https://tagoregarden.kvs.ac.in/">Kendriya Vidyalaya</a></li>
+    <li>Graduated from <a href="http://iitm.net.in/home-3/">IINTM</a></li>
+  </ul>
+  <hr>
+  <h3>Work Experience</h3>
+  <table cellspacing="20">
+    <thead>
+      <th>Dates</th>
+      <th>Work</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2013</td>
+        <td>Passed 10th</td>
+      </tr>
+      <tr>
+        <td>2015</td>
+        <td>Passed 11th</td>
+      </tr>
+      <tr>
+        <td>2016</td>
+        <td>Passed 12th</td>
+      </tr>
+      <tr>
+        <td>2020</td>
+        <td>Graduated</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <h3>Skills</h3>
+  <table cellspacing="20">
+    <tr>
+      <td>
+        <table cellspacing="20">
+          <tr>
+            <td>C</td>
+            <td>⭐</td>
+          </tr>
+          <tr>
+            <td>DS</td>
+            <td>⭐</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table cellspacing="20">
+          <tr>
+            <td>Web Development</td>
+            <td>⭐</td>
+          </tr>
+          <tr>
+            <td>Java</td>
+            <td>⭐</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+  <hr>
+  <a href="hobbies.html">My Hobbies</a>
+  <br><br>
+  <a href="contact-me.html">Contact Me</a>
 </body>
 
 </html>
